@@ -1,5 +1,5 @@
 dnl
-dnl  $Id: configure.in,v 1.8 2004/08/20 07:24:39 psavola Exp $
+dnl  $Id: configure.in,v 1.9 2004/08/20 07:25:59 psavola Exp $
 dnl
 dnl   Authors:
 dnl    Lars Fenneberg		<lf@elemental.net>	 
@@ -13,7 +13,7 @@ dnl   may request it from <lutchann@litech.org>.
 dnl
 dnl
 
-AC_REVISION ($Id: configure.in,v 1.8 2004/08/20 07:24:39 psavola Exp $)
+AC_REVISION ($Id: configure.in,v 1.9 2004/08/20 07:25:59 psavola Exp $)
 AC_INIT(radvd.c)
 
 AC_CANONICAL_SYSTEM
@@ -132,12 +132,14 @@ AC_C_CONST
 AC_MSG_CHECKING(whether struct sockaddr_in6 has sin6_scope_id)
 AC_TRY_COMPILE([#include <sys/types.h>
 #include <netinet/in.h>], [static struct sockaddr_in6 ac_sin6; int ac_size = 
-sizeof (ac_sin6.sin6_scope_id);], [AC_MSG_RESULT(yes); AC_DEFINE(HAVE_SIN6_SCOPE_ID)],
+sizeof (ac_sin6.sin6_scope_id);], [AC_MSG_RESULT(yes); AC_DEFINE([HAVE_SIN6_SCOPE_ID],
+1, [whether struct sockaddr_in6 has sin6_scope_id])],
 AC_MSG_RESULT(no))
 
 AC_MSG_CHECKING(whether struct in6_addr has u6_addrXX and defines s6_addrXX)
 AC_TRY_COMPILE([#include <netinet/in.h>], [static struct in6_addr in6_u; 
-int u =  in6_u.s6_addr16;], [AC_MSG_RESULT(yes); AC_DEFINE(HAVE_IN6_ADDR_S6_ADDR)],
+int u =  in6_u.s6_addr16;], [AC_MSG_RESULT(yes); AC_DEFINE([HAVE_IN6_ADDR_S6_ADDR],
+1, [whether struct in6_addr has u6_addrXX and defines s6_addrXX])],
 AC_MSG_RESULT(no))
 
 dnl Checks for library functions.
